@@ -1,3 +1,10 @@
+2007-05-19  Robert Millan  <rmh@aybabtu.com>
+
+	* commands/i386/cpuid.c: New module.
+	* DISTLIST: Add it.
+	* conf/i386-efi.rmk: Enable cpuid.mod.
+	* conf/i386-pc.rmk: Likewise.
+
 2007-05-18  Jeroen Dekkers  <jeroen@dekkers.cx>
 
 	* kern/disk.c (grub_disk_read): Check return value of
